--- a/3sabores/pages/menu.html
+++ b/3sabores/pages/menu.html
@@ -9,7 +9,7 @@
     </head>
     <<body>
         <div class="container-fluid">
-            <img src="../images/menu.jpg" alt="">
+            <img class="menu" src="../images/menu.jpg" alt="">
         </div>
     </body>
 </html>
