--- a/3sabores/pages/menu.html
+++ b/3sabores/pages/menu.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="../style/style.css">
     </head>
-    <<body>
+    <body>
         <div class="container-fluid">
             <img class="menu" src="../images/menu.jpg" alt="" style="width:100%;">
         </div>
